extensions/example_filter/tests/wasm_null/envoy.yaml
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 18000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            weighted_clusters:
                              clusters:
                              - name: default_echoserver
                                weight: 70
                              - name: default_echosvc
                                weight: 30
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            '@type': type.googleapis.com/google.protobuf.StringValue
                            value: |
                              {
                                "debug": "false",
                                "stat_prefix": "istio",
                                "disable_host_header_fallback": true
                              }
                          root_id: "example"
                          vm_config:
                            vm_id: "example"
                            runtime: "envoy.wasm.runtime.null"
                            code:
                              local:
                                inline_string: envoy.wasm.example
                  - name: envoy.filters.http.router
    - name: server
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 18001
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                      - match:
                          prefix: "/error"
                        direct_response:
                          status: 503
                          body:
                            inline_string: "error\n"
                      - match:
                          prefix: "/"
                        direct_response:
                          status: 200
                          body:
                            inline_string: "example body\n"
                http_filters:
                  - name: envoy.filters.http.fault
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
                      delay:
                        fixed_delay: 1s
                        percentage:
                          numerator: 1
                          denominator: HUNDRED
                  - name: envoy.filters.http.router

  clusters:
    - name: default_echoserver
      connect_timeout: 5000s
      type: static
      lb_policy: round_robin
      load_assignment:
        cluster_name: default_echoserver
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 18001
    - name: default_echosvc
      connect_timeout: 5000s
      type: static
      lb_policy: round_robin
      load_assignment:
        cluster_name: default_echosvc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 18001

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
